# hezm-smartchat

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT_STATUS.md  Makefile  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  env.production.example  pyproject-simple.toml  pyproject.toml  run_embedding_test.py
.cursor/: mcp.json
.github/workflows/: README.md  cicd.yml
.kilocode/: mcp.json
.taskmaster/: config.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json  tasks.json.bak
backend/: Dockerfile  Dockerfile.dev  alembic.ini  celery_app.py  config.py  database.py  env.example  environment.example  init_db.py  main.py  requirements.txt  run_dev.py  start_celery.py  test_dialogue_engine.py  test_document_processing.py  test_e2e_document.md  test_embedding_generation.py  test_embedding_integration.py  test_embedding_model.py  test_hybrid_search.py  test_new_document.txt  test_upload.py  test_vectorization.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  3250c1d99fd2_initial_migration_create_all_tables.py  4a102a34b026_initial_migration_create_all_tables_.py  728be9a2c3a6_add_chunk_type_to_documentchunk.py
backend/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  redis.py
backend/models/: __init__.py  conversation.py  document.py  user.py
backend/routers/: cache.py  dialogue.py  documents.py  search.py  upload.py
backend/schemas/: __init__.py  conversation.py  dialogue.py  document.py  error.py  search.py  user.py
backend/services/: __init__.py  cache_monitor.py  conversation_cache.py  dialogue_service.py  document_cache.py  document_processor.py  embedding_service.py  file_service.py  hybrid_search.py  llm_service.py  search_cache.py  text_splitter.py  vector_service.py  websocket_service.py
backend/tasks/: __init__.py  document_tasks.py  test_embedding_model.py  vectorization_tasks.py
backend/tests/: conftest.py  test_cache_monitor.py  test_conversation_cache.py  test_dialogue_service.py  test_document_cache.py  test_document_processor.py  test_embedding_model.py  test_embedding_service.py  test_file_service.py  test_hybrid_search.py  test_llm_service.py  test_search_cache.py  test_text_splitter.py  test_upload_router.py  test_vector_service.py  test_vectorization_tasks.py  test_websocket_service.py
docs/: PRODUCTION_SETUP.md  README.md  uv-guide.md
docs/operations/: manual.md
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: ConversationArea.tsx  DocumentList.tsx  DocumentUpload.tsx  ErrorBoundary.tsx  ErrorToast.tsx  Layout.tsx  index.ts
frontend/src/contexts/: ErrorContext.tsx
frontend/src/hooks/: useResponsive.ts
frontend/src/services/: conversationService.ts  documentService.ts
frontend/src/utils/: theme.ts
infrastructure/kubernetes/: deployments.yaml  namespace.yaml
infrastructure/security/: README.md  manage-security.sh
infrastructure/terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
scripts/: init-db.sql  migrate_database.py  setup_production_server.sh  setup_uv.sh
